Revert "Optimisation et Nettoyage du code (#553)" (#683)
This reverts commit c308bdb1166f3f82594e8a8e45c3752f5867ca0d.